--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monster",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://syl20ko.github.io/ExoReact",
+  "homepage": "https://syl20ko.github.io/monstereact",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
